--- a/package.json
+++ b/package.json
@@ -18,15 +18,14 @@
   "scripts": {
     "test": "node --test --experimental-strip-types",
     "test:watch": "node --test --experimental-strip-types --watch",
-    "build": "pnpm build:types && pnpm build:bundle",
+    "build": "node --run build:types && node --run build:bundle",
     "build:types": "tsc",
     "build:bundle": "esbuild src/routeutil.js --bundle --minify --target=es2023 --format=esm --outdir=dist --sourcemap",
-    "preversion": "pnpm test && pnpm build; git add dist/"
+    "preversion": "node --run test && node --run build; git add dist/"
   },
   "devDependencies": {
-    "esbuild": "^0.23.0",
-    "jsdom": "^24.1.1",
-    "typescript": "^5.5.4"
-  },
-  "packageManager": "pnpm@9.6.0+sha512.38dc6fba8dba35b39340b9700112c2fe1e12f10b17134715a4aa98ccf7bb035e76fd981cf0bb384dfa98f8d6af5481c2bef2f4266a24bfa20c34eb7147ce0b5e"
+    "esbuild": "^0.25.0",
+    "jsdom": "^26.0.0",
+    "typescript": "^5.7.3"
+  }
 }
